New services, switched to Go, Docker configs added
